# oxide

./: .gitmessage  .rustfmt.toml  Cargo.toml  README.md  config.toml  wasm-stage.sh  wasm_build.sh
crates/examples/auto/: Cargo.toml
crates/examples/auto/src/: lib.rs  main.rs
crates/examples/basic/: Cargo.toml
crates/examples/basic/resources/: s01c01_low_poly_sphere.glb
crates/examples/basic/src/: lib.rs  main.rs
crates/examples/city/: Cargo.toml
crates/examples/city/src/: lib.rs  main.rs
crates/examples/cube/: Cargo.toml  build.rs
crates/examples/cube/src/: lib.rs  main.rs
crates/examples/de_dust2/: Cargo.toml
crates/examples/de_dust2/src/: lib.rs  main.rs
crates/examples/maxwell/: Cargo.toml
crates/examples/maxwell/src/: lib.rs  main.rs
crates/examples/mc/: Cargo.toml
crates/examples/mc/src/: lib.rs  main.rs
crates/examples/pong/: Cargo.toml
crates/examples/pong/resources/: blue_paddle.glb
crates/examples/pong/src/: lib.rs  main.rs
crates/examples/primjer/: Cargo.toml
crates/examples/primjer/src/: main.rs
crates/examples/snake/: Cargo.toml
crates/examples/snake/src/: lib.rs  main.rs
crates/oxide/: Cargo.toml
crates/oxide-macro/: Cargo.toml
crates/oxide-macro/src/: lib.rs
crates/oxide/src/: camera.rs  config.rs  engine.rs  lib.rs  lighting.rs  material.rs  model.rs  resource.rs  resources.rs  texture.rs
crates/oxide/src/geometry/: mesh.rs  primitives.rs  vertex.rs
crates/oxide/src/input/: manager.rs  mod.rs
crates/oxide/src/renderer/: camera.rs  graph.rs  mod.rs  pipeline.rs  renderer.rs  shader.rs  shader.wgsl  surface.rs
crates/oxide/src/ui/: mod.rs  renderer.rs
crates/oxide/src/utils/: exit.rs  mod.rs  random.rs
crates/snake/: Cargo.toml  wasm-stage.sh
crates/snake/src/: lib.rs  main.rs
dipl/: thesis.md
docs/: CNAME  README.md  index.html  oxide.d.ts  oxide.js  oxide_bg.wasm.d.ts
docs/auto/: auto.js  auto_bg.wasm.d.ts  index.html  package.json
docs/basic/: basic.d.ts  basic.js  basic_bg.wasm.d.ts  index.html  package.json
docs/basic/resources/: license.txt  scene.gltf
docs/city/: city.d.ts  city.js  index.html  package.json
docs/cube/: cube.d.ts  cube.js  cube_bg.wasm.d.ts  index.html  package.json
docs/de_dust2/: de_dust2.d.ts  de_dust2.js  de_dust2_bg.wasm.d.ts  index.html  package.json
docs/maxwell/: index.html  maxwell.js  package.json
docs/mc/: index.html  mc.d.ts  mc.js  package.json
docs/oxide/: index.html  oxide.d.ts  oxide.js  oxide_bg.wasm.d.ts  package.json
docs/pong/: index.html  pong.d.ts  pong.js  pong_bg.wasm.d.ts
docs/primjer/: index.html  package.json  primjer.js
docs/snake/: index.html  package.json  snake.d.ts  snake.js  snake_bg.wasm  snake_bg.wasm.d.ts
src/: app.rs  camera.rs  config.rs  engine.rs  gui.rs  lib.rs  main.rs  resource.rs  shader.wgsl  state.rs  texture.rs
src/geometry/: mesh.rs  primitives.rs  vertex.rs
src/input/: mod.rs
src/renderer/: camera.rs  graph.rs  mod.rs  pipeline.rs  shader.rs  shader.wgsl
src/scene/: camera.rs  mod.rs
src/ui/: mod.rs  renderer.rs
src/utils/: bootstrap.rs  exit.rs  mod.rs
static/: index.html
