[package]
name = "oxide"
version = "0.1.0"
authors = ["Safet Imamović <https://github.com/SafetImamovic>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oxide_bin"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.4", features = ["serde"] }
anyhow = "1.0.98"
winit = { version = "0.30.12", features = ["android-native-activity"] }
env_logger = "0.11.8"
log = "0.4.27"
wgpu = "25.0.2"
pollster = "0.4.0"
bytemuck = { version = "1.23.2", features = [ "derive" ] }
# Modified egui dependencies without clipboard
egui = { version = "0.32.0",  features = [] }
egui-wgpu = { version = "0.32.0", default-features = false }
egui-winit = { version = "0.32.0", default-features = false }
rand = "0.9.2"
colored = "3.0.0"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "25.0.2", features = ["webgl"]}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "Element",
    "Navigator",
    "HtmlElement"
]}
# Modified egui for WASM without clipboard
egui = { version = "0.32.0", default-features = false, features = [] }
