[package]
name = "oxide"
version = "0.1.0"
authors = ["Safet Imamović <https://github.com/SafetImamovic>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
gltf = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.4", features = ["serde"] }
anyhow = "1.0.98"
winit = { version = "0.30.12", features = ["android-native-activity"] }
env_logger = "0.11.8"
log = "0.4.27"
wgpu = "25.0.2"
pollster = "0.4.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
# Modified egui dependencies without clipboard
egui = { version = "0.32.0", features = [] }
egui-wgpu = { version = "0.32.0", default-features = false }
egui-winit = { version = "0.32.0", default-features = false }
colored = "3.0.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
cgmath = "0.18.0"
derivative = "2.2.0"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
instant = "0.1.13"
rand = "0.9.2"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg", "tga"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.12.23"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "25.0.2", features = ["webgl"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.78"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "Element",
    "Navigator",
    "Location",
    "HtmlElement"
] }
# Modified egui for WASM without clipboard
egui = { version = "0.32.0", default-features = false, features = [] }

